Fix breadcrumbs z-index

--- a/app/assets/stylesheets/web/blocks/breadcrumbs-section.sass
+++ b/app/assets/stylesheets/web/blocks/breadcrumbs-section.sass
@@ -11,6 +11,7 @@
   text-shadow: 0 2px 3px rgba(#000, 0.1)
   top: 0
   width: 100%
+  z-index: 1
 
   .breadcrumbs
     .breadcrumb
